# HaskTacToe

./: .travis.yml  HaskTacToe.cabal  LICENSE  README.md
src/: Main.hs
