name:                HaskTacToe
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/HaskTacToe#readme
license:             BSD3
license-file:        LICENSE
author:              Stjepan Poljak
maintainer:          stjepan.poljak@protonmail.com
copyright:           2018 Stjepan Poljak
category:            Games
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable HaskTacToe
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, process
